--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ logging.level.org.springframework.mail=DEBUG
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+
+#sender email user name and password
 spring.mail.username=username
 spring.mail.password=password
 
